# skin-lesion-classifier-gcp-deploy

./: .dockerignore  .gitignore
project/: cloudbuild-api.yaml  cloudbuild-ui.yaml  pyproject.toml
project/api/: Dockerfile  main.py  requirements.txt
project/data/: datamodule.py
project/models/: model.py  transforms.py
project/ui/: Dockerfile  app.py  requirements.txt
project/utils/: create_embedding_center.py
